# infrastructure-engineering

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  announcement.txt  pyproject.toml
.github/workflows/: artifacts.yml  workflow.yml
01-cicd/: 01_cicd.odp
examples/: CMakeLists.txt  README.md  workflow.yaml
examples/arithmetic_progression/: CMakeLists.txt  Dockerfile  README.md  build.sh  conanfile.txt  main.cpp  pyproject.toml
examples/arithmetic_progression/.github/workflows/: workflow.yml
examples/arithmetic_progression/include/: arithmetic_progression.h
examples/arithmetic_progression/src/: arithmetic_progression.cpp
examples/arithmetic_progression/tests/: test_arithmetic_progression.cpp
examples/fibonacci_sequence/: CMakeLists.txt  README.md
examples/fibonacci_sequence/include/: fibonacci_sequence.h
examples/fibonacci_sequence/src/: fibonacci_sequence.cpp
examples/fibonacci_sequence/tests/: test_fibonacci_sequence.cpp
slides/odp/: 02_cicd.odp  03_containers.odp  04_containers.odp  05_python.odp  06_package_management.odp  intro.odp
slides/pptx/: .~lock.02_cicd.odp#  01_cicd.pptx  02_cicd.odp  03_containers.pptx  04_containers.pptx  05_python.pptx  06_package_management.pptx  intro.pptx
